# gtg-eval

./: .gitignore  README.md  pyproject.toml
data/: download_puzzles.py  download_raw_screenshots.py  puzzle_answers_to_jsonl.ts
gtg_eval/: dataset.py  evaluation.py  lm_adapter.py  logging.py  run.py  schema.py  utils.py
prompt_template/: english-v2-nohint.json  english-v2.json  english-v3-nohint.json  english-v3.json  english.json
tests/: test_dataset.py  test_evaluation.py
tests/golden/: build_next_prompt_allow_video.json  build_next_prompt_incorrect.json  build_next_prompt_initial.json  build_next_prompt_multiple_guesses.json  build_next_prompt_same_franchise.json
