[project]
name = "gtg_eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.0",
    "httpx>=0.28.1",
    "litellm>=1.65.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.1",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "tqdm>=4.67.1",
    "typer-slim>=0.15.2",
]

[project.optional-dependencies]
volc = [
    "volcengine-python-sdk[ark]>=1.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
